syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "services/images/image.proto";
import "services/entities/entity.proto";

option go_package = "github.com/the-medo/talebound-backend/pb";

message User {
  int32 id = 1;
  string username = 2;
  string email = 3;
  optional int32 imgId = 4;
  google.protobuf.Timestamp passwordChangedAt = 5;
  google.protobuf.Timestamp createdAt = 6;
  bool isEmailVerified = 7;
  Image img = 8;
  optional int32 introductionPostId = 9;
}

message ViewUser {
  int32 id = 1;
  string username = 2;
  string email = 3;
  optional int32 imgId = 4;
  google.protobuf.Timestamp passwordChangedAt = 5;
  google.protobuf.Timestamp createdAt = 6;
  bool isEmailVerified = 7;
  optional string avatarImageUrl = 8;
  optional string avatarImageGuid = 9;
  optional int32 introductionPostId = 10;
  optional google.protobuf.Timestamp introductionPostDeletedAt = 11;
}

message UserModule {
  int32 userId = 1;
  int32 moduleId = 2;
  bool admin = 3;
  bool favorite = 4;
  bool following = 5;
  repeated EntityType entityNotifications = 8;
}